--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <body id="todoit" style="text-align: center">
         <h1>ToDoIt</h1>
         <h2>Add new items</h2>
-        <p>TODO</p>
+        <p>
+            What needs to be done?
+            <input type="text" id="todoInput" title="What should be added to the todo list?" />
+            <input type="button" value="Add todo" />
+        </p>
+
+        <h2>Current todo list</h2>
+        <p>Filter: <input type="text" id="todoFilter" title="Filter for the todo list" /></p>
+
+        <div id="todoListContainer">Nothing to do, hurray!</div>
+        <script type="text/javascript" src="todo-it.js"></script>
     </body>
 </html>
